Cambios en el body

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola, este es mi sitio web
+        Hola titi, este es mi sitio web. Practica de platzi
     </p>
 </body>
 </html>
